--- a/config.org
+++ b/config.org
@@ -1,5 +1,5 @@
 #+TITLE: Emacs Eats Dirt
-#+AUTHOR: Ieatdirt
+#+AUTHOR: Ieatdirtdirt
 #+DESCRIPTION: GNU Emacs config based off of Distrotube's configuring emacs series
 #+STARTUP: showeverything
 #+OPTIONS: toc:2
@@ -391,6 +391,7 @@ Emacs Dashboard is an extensible startup screen showing you recent files, bookma
   (use-package dashboard
     :ensure t 
     :init
+    (setq initial-buffer-choice (lambda () (get-buffer-create dashboard-buffer-name)))
     (setq initial-buffer-choice 'dashboard-open)
     (setq dashboard-set-heading-icons t)
     (setq dashboard-set-file-icons t)
@@ -398,6 +399,8 @@ Emacs Dashboard is an extensible startup screen showing you recent files, bookma
     (setq dashboard-startup-banner 'logo) ;; use standard emacs logo as banner
     (setq dashboard-startup-banner "/home/dt/.config/emacs/images/emacs-dash.png")  ;; use custom image as banner
     (setq dashboard-center-content t) ;; set to 't' for centered content
+    (setq dashbaord-footer-icon "emacs")
+    (setq dashboard-display-icons-p t)
     (setq dashboard-items '((recents . 5)
                             (agenda . 5 )
                             (bookmarks . 3)
