Get it working on macos

--- a/config.org
+++ b/config.org
@@ -95,7 +95,7 @@
   (elpaca-use-package-mode)
   ;; Assume :ensure t unless otherwise specified.
   (setq elpaca-use-package-by-default t))
-(elpaca '(cond-let :repo "/home/jay/cond-let"))
+(elpaca '(cond-let :repo "/Users/jaysingh/cond-let"))
 ;; Block until current queue processed.
 (elpaca-wait)
 
@@ -669,7 +669,7 @@ Org-tempo is not a separate package but a module within org that can be enabled.
 (use-package pandoc)
 #+end_src
 * RAINBOW MODE
-Display the actual color as a background for any hex color value (ex. #ffffff).  The code block below enables rainbow-mode in all programming modes (prog-mode) as well as org-mode, which is why rainbow works in this document.  
+Display the actual color as a background for any hex color value (ex. #f0ffff).  The code block below enables rainbow-mode in all programming modes (prog-mode) as well as org-mode, which is why rainbow works in this document.  
 
 #+begin_src emacs-lisp
 (use-package rainbow-mode
